--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>{% block title %}{% endblock %}</title>
+    {% block head %}{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
