--- a/templates/word.html
+++ b/templates/word.html
@@ -3,6 +3,11 @@
 
 {% block title %}Word{% endblock %}
 
+
+{% block head %}
+<meta name="csrf-token" content="{{ csrf_token() }}">
+{% endblock %}
+
 {% block back_button %}
 {% with back_link=url_for('WordView:list', type=word_dict.type)%}
 {% include "snippets/back_button.html" %}
@@ -13,14 +18,6 @@
 {% set deck_length = ids|len %}
 
 {% block bottom_nav %}
-
-<style>
-    .collapse {
-        -webkit-transition: none;
-
-        transition: height 0.01s;
-    }
-</style>
 
 <div id="bottom-nav" class="fixed-bottom">
 
@@ -197,6 +194,7 @@
     document.onkeydown = (e) => {
 
         var code = e.keyCode || e.which;
+        // console.log(code)
         switch (code) {
             case 37: // left
                 $("#prev-word").click();
@@ -206,11 +204,11 @@
                 $("#next-word").click();
                 break;
 
-            case 49: // 1
+            case 65: // A
                 $("#hard-radio").click();
                 break;
 
-            case 50: // 2
+            case 83: // S
                 $("#easy-radio").click();
                 break;
             case 32: // 2
@@ -225,10 +223,14 @@
 
     updateWordDifficulty = (diff = 1) => {
 
-        word_id = "{{word_dict['_id']}}"
+        var csrftoken = "{{ csrf_token() }}"
+        var word_id = "{{word_dict['_id']}}"
 
         $.ajax({
             url: `{{url_for('WordView:update_difficulty')}}`,
+            beforeSend: (xhr) => {
+                xhr.setRequestHeader("X-CSRFToken", csrftoken)
+            },
             type: "POST",
             dataType: 'json',
             contentType: "application/json",
